# dockru

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  MIGRATION_GUIDE.md  PERFORMANCE.md  README.md  RUST_README.md  TESTING.md  build.rs  install  justfile  rust-completed.md  rust-dead.md  rust-migration-plan.md  rust-migration-research.md  rust-next.md
.github/workflows/: ci.yml
docker/: Dockerfile  compose.yaml
docs/: frontend-next.md
frontend/: .eslintrc.cjs  components.d.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/common/: agent-socket.ts  util-common.ts
frontend/public/: manifest.json
frontend/src/: i18n.ts  icon.ts  main.ts  router.ts  util-frontend.ts
frontend/src/components/: ArrayInput.vue  ArraySelect.vue  Confirm.vue  Container.vue  HiddenInput.vue  Login.vue  NetworkInput.vue  StackList.vue  StackListItem.vue  Terminal.vue  TwoFADialog.vue  Uptime.vue
frontend/src/components/settings/: About.vue  Appearance.vue  General.vue  GlobalEnv.vue  Security.vue
frontend/src/lang/: ar.json  be.json  bg-BG.json  ca.json  cs-CZ.json  da.json  de-CH.json  de.json  en.json  es.json  fr.json  ga.json  hu.json  id.json  it-IT.json  ja.json  ko-KR.json  nb_NO.json  nl.json  pl-PL.json  pt-BR.json  pt.json  ro.json  ru.json  sl.json  sv-SE.json  th.json  tr.json  uk-UA.json  ur.json  vi.json  zh-CN.json  zh-TW.json
frontend/src/layouts/: Layout.vue
frontend/src/mixins/: lang.ts  socket.ts  theme.ts
frontend/src/pages/: Compose.vue  Console.vue  ContainerLogs.vue  ContainerPage.vue  ContainerTerminal.vue  Dashboard.vue  DashboardHome.vue  Settings.vue  Setup.vue
frontend/src/styles/: main.scss  vars.scss
migrations/: 20231020082900_user_table.sql  20231020082901_setting_table.sql  20231220211700_agent_table.sql
src/: agent_manager.rs  auth.rs  broadcasts.rs  check_version.rs  config.rs  docker.rs  docker_client.rs  main.rs  rate_limiter.rs  server.rs  socket_auth.rs  stack.rs  static_files.rs  terminal.rs
src/db/: mod.rs
src/db/models/: agent.rs  mod.rs  setting.rs  user.rs
src/socket_handlers/: agent.rs  auth.rs  helpers.rs  mod.rs  settings.rs  stack_management.rs  terminal.rs
src/utils/: constants.rs  crypto.rs  docker.rs  limit_queue.rs  mod.rs  terminal.rs  types.rs  yaml_utils.rs
