[package]
name = "dockru"
version = "1.5.1"
edition = "2021"
rust-version = "1.75"
default-run = "dockru"

[[bin]]
name = "dockru"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Socket.io server
socketioxide = { version = "0.18.2", features = ["tracing"] }

# HTTP server and middleware
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = [
  "fs",
  "compression-full",
  "trace",
  "cors",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }

# Configuration management
config = "0.14"

# Graceful shutdown
tokio-util = "0.7"

# Cryptographic random number generation
rand = "0.8"

# YAML parsing with comment preservation
yaml-rust2 = "0.8"

# Regular expressions
regex = "1.10"

# Environment variable substitution
envsubst = "0.2"

# Phase 5: Terminal/PTY System
# Cross-platform PTY support
portable-pty = "0.8"

# Static initialization for terminal registry
once_cell = "1.20"

# Which command detection (for shell detection)
which = "6.0"

# Database - SQLite with async support
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "sqlite",
  "macros",
  "migrate",
] }

# URL parsing
url = "2.5"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Phase 10: HTTP client for version checking
reqwest = { version = "0.12", features = ["json"] }

# Phase 4: Authentication & Security
# Password hashing with bcrypt
bcrypt = "0.15"

# SHA3 for shake256 password fingerprinting
sha3 = "0.10"

# Hex encoding for shake256 output
hex = "0.4"

# JWT token creation and verification
jsonwebtoken = "9"

# Rate limiting
governor = "0.6"

# Symmetric encryption for agent password at-rest encryption
aes-gcm = "0.10"

# Base64 encoding for encrypted data storage
base64 = "0.22"

# Phase 8: Agent Management System
# Socket.io client for connecting to remote Dockge instances
rust_socketio = { version = "0.6", features = ["async"] }

# Async utilities for boxed futures in callbacks
futures-util = "0.3"

# Semantic version parsing for version checks
semver = "1.0"
redact = { version = "0.1.11", features = ["serde"] }

# Docker run to compose conversion
composerize-np = "0.2"

# Docker SDK for programmatic Docker operations
bollard = "0.17"

[dev-dependencies]
tempfile = "3.10"
uuid = { version = "1.10", features = ["v4"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
